; ModuleID = '/home/carl/AnghaBench/ish/fs/proc/extr_entry.c_proc_entry_mode.c'
source_filename = "/home/carl/AnghaBench/ish/fs/proc/extr_entry.c_proc_entry_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc_entry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@S_IFMT = common dso_local global i32 0, align 4
@S_IFREG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_entry_mode(%struct.proc_entry* %0) #0 {
  %2 = alloca %struct.proc_entry*, align 8
  %3 = alloca i32, align 4
  store %struct.proc_entry* %0, %struct.proc_entry** %2, align 8
  %4 = load %struct.proc_entry*, %struct.proc_entry** %2, align 8
  %5 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @S_IFMT, align 4
  %11 = and i32 %9, %10
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @S_IFREG, align 4
  %15 = load i32, i32* %3, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %1
  %18 = load i32, i32* %3, align 4
  %19 = and i32 %18, 511
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %21, label %45

21:                                               ; preds = %17
  %22 = load i32, i32* %3, align 4
  %23 = call i64 @S_ISREG(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %21
  %26 = load i32, i32* %3, align 4
  %27 = or i32 %26, 292
  store i32 %27, i32* %3, align 4
  br label %44

28:                                               ; preds = %21
  %29 = load i32, i32* %3, align 4
  %30 = call i64 @S_ISDIR(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %28
  %33 = load i32, i32* %3, align 4
  %34 = or i32 %33, 365
  store i32 %34, i32* %3, align 4
  br label %43

35:                                               ; preds = %28
  %36 = load i32, i32* %3, align 4
  %37 = call i64 @S_ISLNK(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %35
  %40 = load i32, i32* %3, align 4
  %41 = or i32 %40, 511
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %39, %35
  br label %43

43:                                               ; preds = %42, %32
  br label %44

44:                                               ; preds = %43, %25
  br label %45

45:                                               ; preds = %44, %17
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i64 @S_ISREG(i32) #1

declare dso_local i64 @S_ISDIR(i32) #1

declare dso_local i64 @S_ISLNK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
